--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="frame">
         <img src="img/face.png" alt="Андрей Зеленцов" width="220" height="246">
       </div>
-      <p class="whoami">дизайнер | HTML&#8209;верстальщик</p>
+      <p class="whoami">дизайнер, HTML&#8209;верстальщик</p>
       <ul class="competences">
         <li>InDesign</li>
         <li>Photoshop</li>
