--- a/index.html
+++ b/index.html
@@ -74,13 +74,14 @@
     <section class="hobby">
       <h2 class="common-header">Увлечения</h2>
       <p>
-        Изучаю новое, сейчас это фронтенд — HTML5, CSS3, SASS, JS, jQuery. Вожусь с&nbsp;машиной. Играю на&nbsp;гитарах и&nbsp;бас&#8209;гитарах, танцую касино, выбираюсь в&nbsp;леса.
+        Изучаю новое, сейчас это фронтенд — HTML5, CSS3, SASS, JS, jQuery. Играю на&nbsp;гитарах и&nbsp;бас&#8209;гитарах, танцую касино, выбираюсь в&nbsp;леса.
       </p>
     </section>
   </div>
-  <div class="container">
+  <div class="container bottom">
     <footer class="main-footer">
-
+      <p class="link"><a href="portfolio.html">Плакаты VainEndeavors&nbsp;Project</a></p>
+      <p class="copyright">&#0169;Андрей Зеленцов, 2017</p>
     </footer>
   </div>
 </body>
